tests/syntax_error/string_continue_on_next_line.jou
import "stdlib/io.jou"

# Output: compiler error in file "tests/syntax_error/string_continue_on_next_line.jou", line 6: missing " to end the string
def main() -> int:
    a = "\
    asdf
    printf(a)
    return 0
